# yardstick

./: .gitignore  CMakeLists.txt  LIMITATIONS.md  Makefile  README.md  extension_config.cmake  vcpkg.json  yardstick_definitions.sql
.claude/: settings.local.json
.github/workflows/: MainDistributionPipeline.yml  Release.yml
docs/: measures-sql-paper-parity.md  ordered_set_aggregates.md  yardstick_adtech_kitchen_sink.ipynb  yardstick_looker_demo.ipynb
include/: yardstick_ffi.h
src/: yardstick_extension.cpp  yardstick_ffi_usage.cpp  yardstick_parser_ffi.cpp
src/include/: yardstick_extension.hpp
test/sql/: measures.test  no_semantic_prefix.test  peg_parser.test  yardstick.test
yardstick-rs/: Cargo.toml
yardstick-rs/src/: error.rs  ffi.rs  lib.rs  main.rs  parser_ffi.rs
yardstick-rs/src/config/: loader.rs  mod.rs  schema.rs  sql_parser.rs
yardstick-rs/src/core/: dependency.rs  graph.rs  inheritance.rs  mod.rs  model.rs  relative_date.rs  segment.rs  symmetric_agg.rs  table_calc.rs
yardstick-rs/src/sql/: generator.rs  measures.rs  mod.rs  rewriter.rs
