[package]
name = "yardstick"
version = "0.1.0"
edition = "2021"
description = "Measures in SQL - A DuckDB extension implementing Julian Hyde's paper"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
sqlparser = "0.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
once_cell = "1.19"
lazy_static = "1.5"
regex = "1.10"
nom = "7.1"
