[package]
name = "yardstick"
version = "0.1.0"
edition = "2021"
description = "Measures in SQL - A DuckDB extension implementing Julian Hyde's paper"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
sqlparser = "0.52"
thiserror = "2.0"
lazy_static = "1.5"
regex = "1.10"
nom = "7.1"
once_cell = "1.19"
